crates/swc/tests/tsc-references/types/primitives/boolean/invalidBooleanAssignments/input.ts/es2015.2.minified/output.js
var E, E1, M;
(E = E1 || (E1 = {
}))[E.A = 0] = "A", (M || (M = {
})).a = 1, M = !0;
